feat: Add bag app for handling the shopping bag

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -77,7 +77,7 @@ Browse Our Store
                                 <small class="text-muted text-start ps-2">No Rating</small>
                                 {% endif %}
                                 <p class="text-start ps-2 mb-0"><a href="#" class="text-muted fs-6 category-tag"><i
-                                            class="fa-solid fa-tags mr-2"></i> {{ product.category.friendly_name }}</a></p>
+                                            class="fa-solid fa-tags me-1"></i> {{ product.category.friendly_name }}</a></p>
                                 {% if request.user.is_superuser %}
                                     <small>
                                         <a href="{% url 'edit_product' product.id %}">Edit</a>
