--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -26,7 +26,7 @@
             <p class="small mt-1 mb-0">
                 <a class="text-muted category-tag"
                     href="{% url 'products' %}?category={{ product.category.name }}">
-                    <i class="fas fa-tag mr-1 pe-1"></i>{{ product.category.friendly_name }}
+                    <i class="fas fa-tag me-1"></i>{{ product.category.friendly_name }}
                 </a>
             </p>
             {% endif %}
@@ -109,9 +109,9 @@
 </div>
 {% endif %}
 <div class="row">
-    <h4 class="text-start fw-semibold">Reviews</h4>
+    <h4 class="text-start fw-semibold mb-3">Reviews for this Product: {{ reviews.count }}</h4>
     {% if reviews.count == 0 %}
-    <h5 class="text-start fw-semibold">No Reviews Yet!</h5>
+    <h5 class="text-start fw-semibold mb-3">No Reviews Yet!</h5>
     {% else %}
     <div class="col-12">
         {% for review in reviews %}
