--- a/templates/includes/mobile-header.html
+++ b/templates/includes/mobile-header.html
@@ -51,11 +51,15 @@
     </ul>
 </li>
 <li class="list-inline-item">
-    <a class="text-black nav-link d-block d-md-none" href="#">
+    <a class="text-black nav-link d-block d-md-none" href="{% url 'view_bag' %}">
         <div class="text-center me-4">
             <i class="fas fa-shopping-bag"></i>
             <p class="my-0">
+                {% if grand_total %}
+                £{{ grand_total|floatformat:2 }}
+                {% else %}
                 Bag
+                {% endif %}
             </p>
         </div>
     </a>
