feat: Add bag context processors and delivery thresholds to settings.py

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -9,7 +9,7 @@ My bag
 {% block content %}
     <div class="row">
         <div class="col">
-            <h2 class="mb-4 text-center">Shopping bag</h2>
+            <h2 class="mb-4 text-center fw-bold">Shopping bag</h2>
             <hr>
         </div>
     </div>
