--- a/templates/base.html
+++ b/templates/base.html
@@ -127,7 +127,7 @@
             </div>
             <div class="text-center fw-bold col-4">
                 <i class="fa-solid fa-gift fa-lg"></i>
-                <p class="my-0 banner-text">Free Delivery on Orders Over £100!</p>
+                <p class="my-0 banner-text">Free Delivery on Orders Over £{{ free_delivery_threshold }}!</p>
             </div>
             <div class="text-center fw-bold col-4">
                 <i class="fa-solid fa-desktop fa-lg"></i>
