--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -44,14 +44,14 @@
             {% endif %}
             <hr>
             <p class="mt-1">{{ product.description | safe }}</p>
-            <form class="form" action="#" method="POST">
+            <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                 {% csrf_token %}
                 <div class="col-12">
                     <p class="mt-3"><strong>Quantity:</strong></p>
                     <div class="form-group w-50">
                         <div class="input-group">
                             <div class="input-group-prepend">
-                                <button class="decrement-qty btn border border-black rounded-0"
+                                <button class="decrement-qty btn bg-dark text-white border border-black rounded-0"
                                     data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
                                     <span class="icon">
                                         <i class="fas fa-minus"></i>
@@ -61,7 +61,7 @@
                             <input class="form-control qty_input" type="number" name="quantity" value="1" min="1"
                                 max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
                             <div class="input-group-append">
-                                <button class="increment-qty btn border border-black rounded-0"
+                                <button class="increment-qty btn border bg-dark text-white border-black rounded-0"
                                     data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
                                     <span class="icon">
                                         <i class="fas fa-plus"></i>
@@ -73,7 +73,7 @@
                 </div>
 
                 <div class="col{% if s %}-12 mt-2{% endif %}">
-                    <a href="#" class="btn btn-primary mt-5">
+                    <a href="#" class="btn mt-5">
                         <span class="icon">
                             <i class="fa-solid fa-heart fa-lg pe-1"></i>
                         </span>
