--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -85,9 +85,14 @@ Browse Our Store
                                         <a href="{% url 'delete_product' product.id %}" class="text-danger">Delete</a>
                                     </small>
                                 {% endif %}    
-                                <div class="card-footer bg-white pt-2 border-0">
-                                    <a href="#" class="btn btn-success w-100">Add to bag</a>
-                                </div>
+                                <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+                                    {% csrf_token %}
+                                    <div class="card-footer bg-white pt-2 border-0">
+                                        <input type="hidden" name="quantity" type="Number" value="1">
+                                        <input type="submit" class="btn btn-success w-100" value="Add to Bag">
+                                    </div>
+                                    <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                                </form>
                             </div>
                         </div>
                         {% if forloop.counter|divisibleby:1 %}
