--- a/templates/includes/mobile-header.html
+++ b/templates/includes/mobile-header.html
@@ -51,7 +51,7 @@
     </ul>
 </li>
 <li class="list-inline-item">
-    <a class="text-black nav-link d-block d-md-none" href="{% url 'view_bag' %}">
+    <a class="nav-link d-block d-md-none {% if grand_total %}text-primary{% else %}text-black{% endif %}" href="{% url 'view_bag' %}">
         <div class="text-center me-4">
             <i class="fas fa-shopping-bag"></i>
             <p class="my-0">
