--- a/products/templates/products/delete_product.html
+++ b/products/templates/products/delete_product.html
@@ -25,7 +25,11 @@ Delete Product
 <div class="row">
     <div class="col-12 col-md-6 col-lg-6">
         <div class="image-container mt-2">
+            {% if product.image %}
             <img class="img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+            {% else %}
+            <img class="img-fluid" src="{{ MEDIA_URL }}placeholder-img.png" alt="{{ product.name }}">
+            {% endif %}
         </div>
     </div>
     <div class="col-12 col-md-6 col-lg-6">
