--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -10,9 +10,15 @@
 <div class="row">
     <div class="col-12 col-md-6 col-lg-6">
         <div class="image-container mt-2">
+            {% if product.image %}
             <a href="{{ product.image.url }}" target="_blank">
                 <img class="img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
             </a>
+            {% else %}
+            <a href="">
+            <img src="{{ MEDIA_URL }}placeholder-img.png" alt="{{ product.name }}" class="img-fluid">
+            </a>
+            {% endif %}
         </div>
     </div>
     <div class="col-12 col-md-6 col-lg-6">
