--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -47,7 +47,7 @@ My bag
                     </div>
                     <div class="row"><div class="col"><hr></div></div>
                 {% endfor %}
-                <div class="btt-button shadow-sm rounded-0 border border-black">
+                <div class="btt-button shadow-sm border border-black">
                     <a class="btt-link d-flex h-100">
                         <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
                     </a>	
@@ -112,16 +112,16 @@ My bag
 {% block postloadjs %}
 {{ block.super }}
 <script type="text/javascript">
+    // Scroll to top of the page on click
     $('.btt-link').click(function(e) {
         window.scrollTo(0,0)
     })
 </script>
 
-
 <script type="text/javascript">
     // Update quantity on click
     $('.update-link').click(function(e) {
-        var form = $(this).prev('.update-form'); // finds the most recent update-form in the DOM and store in a variable 'form'
+        var form = $(this).prev('.update-form');
         form.submit();
     });
     
