--- a/static/css/base.css
+++ b/static/css/base.css
@@ -121,3 +121,12 @@ a {
     border-color: #dc3545;
     border-radius: 0;
 }
+
+/* Scroll to top button (from Boutique Ado walkthrough) */
+.btt-button {
+    height: 42px;
+    width: 42px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+}
