feat: Add templates for viewing bag information and removed unused code

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -135,6 +135,7 @@ Browse Our Store
 {% block postloadjs%}
 {{ block.super }}
 <script type="text/javascript">
+    // Scroll to top of the page on click
     $('.btt-link').click(function(e) {
         window.scrollTo(0,0)
     })
