--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -42,7 +42,7 @@ My bag
                             <p><strong>Subtotal: </strong>£</p>
                         </div>
                         <div class="col-12 col-sm-6">
-                            
+                            {% include "bag/quantity_form.html" %}
                         </div>
                     </div>
                     <div class="row"><div class="col"><hr></div></div>
@@ -77,7 +77,7 @@ My bag
                             <p class="my-0">£</p>
                         </td>
                         <td class="py-3">
-                            
+                            {% include "bag/quantity_form.html" %}
                         </td>
                         <td class="py-3">
                             <p class="my-0">£</p>
@@ -129,9 +129,8 @@ My bag
     $('.remove-item').click(function(e) {
         var csrfToken = "{{ csrf_token }}";
         var itemId = $(this).attr('id').split('remove_')[1];
-        var size = $(this).data('product_size');
         var url = `/bag/remove/${itemId}/`;
-        var data = {'csrfmiddlewaretoken': csrfToken, 'product_size': size};
+        var data = {'csrfmiddlewaretoken': csrfToken};
 
         $.post(url, data)
          .done(function() {
