--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -16,7 +16,7 @@
             </a>
             {% else %}
             <a href="">
-            <img src="{{ MEDIA_URL }}placeholder-img.png" alt="{{ product.name }}" class="img-fluid">
+                <img src="{{ MEDIA_URL }}placeholder-img.png" alt="{{ product.name }}" class="img-fluid">
             </a>
             {% endif %}
         </div>
@@ -30,14 +30,14 @@
             <p class="lead mb-0 text-left fw-bold">£{{ product.price }}</p>
             {% if product.category %}
             <p class="small mt-1 mb-0">
-                <a class="text-muted category-tag"
-                    href="{% url 'products' %}?category={{ product.category.name }}">
+                <a class="text-muted category-tag" href="{% url 'products' %}?category={{ product.category.name }}">
                     <i class="fas fa-tag me-1"></i>{{ product.category.friendly_name }}
                 </a>
             </p>
             {% endif %}
             {% if product.average_rating %}
-            <small><i class="fas fa-star me-1 text-warning"></i>{{ product.average_rating }} / 5 ({{ reviews.count }})</small>
+            <small><i class="fas fa-star me-1 text-warning"></i>{{ product.average_rating }} / 5
+                ({{ reviews.count }})</small>
             {% else %}
             <small class="text-muted">No Rating</small>
             {% endif %}
@@ -57,17 +57,19 @@
                     <div class="form-group w-50">
                         <div class="input-group input-group-{{ product.id }}">
                             <div class="input-group-prepend">
-                                <button class="decrement-qty btn bg-dark text-white border border-black rounded-0 decrement-qty_{{ product.id }}"
+                                <button
+                                    class="decrement-qty btn bg-dark text-white border border-black rounded-0 decrement-qty_{{ product.id }}"
                                     data-item_id="{{ product.id }}">
                                     <span class="icon">
                                         <i class="fas fa-minus"></i>
                                     </span>
                                 </button>
                             </div>
-                            <input class="form-control qty_input id_qty_{{ product.id }}" type="number" name="quantity" value="1" min="1"
-                                max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                            <input class="form-control qty_input id_qty_{{ product.id }}" type="number" name="quantity"
+                                value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
                             <div class="input-group-append">
-                                <button class="increment-qty btn border bg-dark text-white border-black rounded-0 increment-qty_{{ product.id }}"
+                                <button
+                                    class="increment-qty btn border bg-dark text-white border-black rounded-0 increment-qty_{{ product.id }}"
                                     data-item_id="{{ product.id }}">
                                     <span class="icon">
                                         <i class="fas fa-plus"></i>
@@ -125,13 +127,14 @@
             <div class="card-body">
                 <div class="row">
                     <p class="col-md-2 col-6 fw-semibold">{{ review.author }}</p>
-                    <p class="col-md-2 col-6">Rating: {{ review.rating }} <i
-                            class="fa-solid fa-star text-warning"></i></p>
+                    <p class="col-md-2 col-6">Rating: {{ review.rating }} <i class="fa-solid fa-star text-warning"></i>
+                    </p>
                     <p class="col-md-2 col-6"><span class="fw-bold">Created:</span> {{ review.created_on }}</p>
                     <p class="col-md-2 col-6"><span class="fw-bold">Edited:</span> {{ review.edited_on }}</p>
                     {% if request.user == review.author or request.user.is_superuser %}
                     <p class="col-md-2 col-6"><a href="{% url 'edit_review' review.id %}">Edit</a></p>
-                    <p class="col-md-2 col-6"><a href="{% url 'delete_review' review.id %}" class="text-danger">Delete</a></p>
+                    <p class="col-md-2 col-6"><a href="{% url 'delete_review' review.id %}"
+                            class="text-danger">Delete</a></p>
                     {% endif %}
                 </div>
                 <hr>
