--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -20,25 +20,25 @@ My bag
             <div class="d-block d-md-none">
                 <div class="row">
                     <div class="col">
-                        
+                        {% include "bag/bag_total.html" %}
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        
+                        {% include "bag/checkout_buttons.html" %}
                         <p class="text-muted mb-5">A summary of your bag contents is below.</p>
                     </div>
                 </div>
                 {% for item in bag_items %}
                     <div class="row">
                         <div class="col-12 col-sm-6 mb-2">
-                            
+                            {% include "bag/product_image.html" %}
                         </div>
                         <div class="col-12 col-sm-6 mb-2">
-                            
+                            {% include "bag/product_info.html" %}
                         </div>
                         <div class="col-12 col-sm-6 order-sm-last">
-                            <p class="my-0">Price Each: £</p>
+                            <p class="my-0">Price Each: £{{ item.product.price }}</p>
                             <p><strong>Subtotal: </strong>£</p>
                         </div>
                         <div class="col-12 col-sm-6">
@@ -54,7 +54,7 @@ My bag
                 </div>
             </div>
             <div class="table-responsive rounded d-none d-md-block">
-                <table class="table table-sm table-borderless">
+                <table class="table table-sm">
                     <thead class="text-black">
                         <tr>
                             <th scope="col">Product Info</th>
@@ -68,30 +68,30 @@ My bag
                     {% for item in bag_items %}
                     <tr>
                         <td class="p-3 w-25">
-                            
+                            {% include "bag/product_image.html" %}
                         </td>
-                        <td class="py-3">
-                            
+                        <td class="py-3 align-middle">
+                            {% include "bag/product_info.html" %}
                         </td>
-                        <td class="py-3">
-                            <p class="my-0">£</p>
+                        <td class="py-3 align-middle">
+                            <p class="my-0">£{{ item.product.price }}</p>
                         </td>
-                        <td class="py-3">
+                        <td class="py-3 align-middle">
                             {% include "bag/quantity_form.html" %}
                         </td>
-                        <td class="py-3">
+                        <td class="py-3 align-middle">
                             <p class="my-0">£</p>
                         </td>
                     </tr>
                     {% endfor %}
                     <tr>
-                        <td colspan="5" class="pt-5 text-right">
-                            
+                        <td colspan="5" class="pt-5 text-end">
+                            {% include "bag/bag_total.html" %}
                         </td>
                     </tr>
                     <tr>
-                        <td colspan="5" class="text-right">
-                            
+                        <td colspan="5" class="text-end">
+                            {% include "bag/checkout_buttons.html" %}
                         </td>
                     </tr>
                 </table>
