--- a/bag/templates/bag/checkout_buttons.html
+++ b/bag/templates/bag/checkout_buttons.html
@@ -1,10 +1,10 @@
-<a href="{% url 'products' %}" class="btn btn-primary btn-lg">
+<a href="{% url 'products' %}" class="btn btn-primary btn-lg mb-1">
     <span class="icon">
         <i class="fas fa-chevron-left"></i>
     </span>
     <span class="text-uppercase">Keep Shopping</span>
 </a>
-<a href="#" class="btn btn-dark btn-lg">
+<a href="#" class="btn btn-dark btn-lg mb-1">
     <span class="text-uppercase">Secure Checkout</span>
     <span class="ms-1 icon">
         <i class="fas fa-lock"></i>
