--- a/bag/templates/bag/checkout_buttons.html
+++ b/bag/templates/bag/checkout_buttons.html
@@ -4,7 +4,7 @@
     </span>
     <span class="text-uppercase">Keep Shopping</span>
 </a>
-<a href="#" class="btn btn-dark btn-lg mb-1">
+<a href="{% url 'checkout' %}" class="btn btn-dark btn-lg mb-1">
     <span class="text-uppercase">Secure Checkout</span>
     <span class="ms-1 icon">
         <i class="fas fa-lock"></i>
