feat: Add toast to display bag contents and update profile views

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -13,7 +13,7 @@ My Profile
 
 {% block content %}
 <div class="text-center">
-    <h2 class="fw-bold">{{ profile.user }}'s Profile</h2>
+    <h2 class="fw-bold">{{ request.user }}'s Profile</h2>
 </div>
 <div class="row">
     <!-- Delivery Information -->
