--- a/templates/includes/toasts/toast-info.html
+++ b/templates/includes/toasts/toast-info.html
@@ -1,9 +1,11 @@
-<div class="toast custom-toast" data-bs-autohide="false">
-    <div class="toast-header bg-info text-light">
-        <strong class="me-auto">Alert!</strong>
-        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-    </div>
-    <div class="toast-body bg-white">
-        {{ message }}        
+<div class="message-container">
+    <div class="toast custom-toast" data-bs-autohide="false">
+        <div class="toast-header bg-info text-light">
+            <strong class="me-auto">Alert!</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body bg-white">
+            {{ message }}        
+        </div>
     </div>
 </div>
