--- a/templates/includes/toasts/toast-success.html
+++ b/templates/includes/toasts/toast-success.html
@@ -1,9 +1,69 @@
-<div class="toast custom-toast" data-bs-autohide="true">
-    <div class="toast-header bg-success text-light">
-        <strong class="me-auto">Success!</strong>
-        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-    </div>
-    <div class="toast-body bg-white">
-        {{ message }}
+{% if not on_profile_page and grand_total %}
+<div class="bag-notification-container">
+    <div class="toast custom-toast bag-toast" data-bs-autohide="false">
+        <div class="toast-header bg-success text-light">
+            <strong class="me-auto">Success!</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body bg-white">
+            <div class="row">
+                <div class="col">
+                    {{ message }}
+                    <hr>
+                </div>
+            </div>
+            <p class="fw-bold bg-white text-black py-1">Your Bag ({{ product_count }})</p>
+            <div class="bag-notification-wrapper">
+                {% for item in bag_items %}
+                <div class="row">
+                    <div class="col-3 my-1">
+                        {% if item.product.image %}
+                        <img src="{{ item.product.image.url }}" alt="{{ item.product.name }}" class="w-100">
+                        {% else %}
+                        <img src="{{ MEDIA_URL }}placeholder-img.png" alt="{{ item.product.name }}" class="w-100">
+                        {% endif %}
+                    </div>
+                    <div class="col-9">
+                        <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                        <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+            <div class="row">
+                <div class="col">
+                    <strong>
+                        <p class="mt-3 mb-1 text-black">
+                            Total{% if free_delivery_delta > 0 %} (Exc. delivery){% endif %}:
+                            <span class="float-right">£{{ total|floatformat:2 }}</span>
+                        </p>
+                    </strong>
+                    {% if free_delivery_delta > 0 %}
+                    <p class="mb-1 p-2 bg-warning shadow-sm text-black text-center rounded-2">
+                        Spend <strong>£{{ free_delivery_delta }}</strong> more to get free next day delivery!
+                    </p>
+                    {% endif %}
+                    <a href="{% url 'view_bag' %}" class="btn w-100 btn-dark text-center btn-block">
+                        <span class="text-uppercase">Go To Secure Checkout</span>
+                        <span class="icon">
+                            <i class="fas fa-lock"></i>
+                        </span>
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+{% else %}
+<div class="message-container">
+    <div class="toast custom-toast" data-bs-autohide="true">
+        <div class="toast-header bg-success text-light">
+            <strong class="me-auto">Success!</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body bg-white">
+            {{ message }}
+        </div>
+    </div>
+</div>
+{% endif %}
