feat: Add stripe js and stripe elements and css to handle checkout form styles

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,8 @@
         integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <!-- Font Awesome Script -->
     <script src="https://kit.fontawesome.com/9918a76ce2.js" crossorigin="anonymous"></script>
+    <!-- Stripe -->
+    <script src="https://js.stripe.com/v3/"></script>
     {% endblock %}
 
     {% block extra_js %}
