--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load bag_tools %}
+{% load crispy_forms_filters %}
 {% load crispy_forms_tags %}
 
 {% block extra_css %}
@@ -82,11 +83,11 @@ Checkout
                 {{ order_form.street_address1 | as_crispy_field }}
                 {{ order_form.street_address2 | as_crispy_field }}
                 {{ order_form.county | as_crispy_field }}
-                <div class="form-check form-check-inline float-right me-0">
+                <div class="form-check form-check-inline float-start me-0">
                     {% if user.is_authenticated %}
                     <label class="form-check-label" for="id-save-info">Save this delivery information to my
                         profile</label>
-                    <input class="form-check-input ms-2 me-0" type="checkbox" id="id-save-info" name="save-info"
+                    <input class="form-check-input ms-0 me-2" type="checkbox" id="id-save-info" name="save-info"
                         checked>
                     {% else %}
                     <label class="form-check-label" for="id-save-info">
@@ -129,4 +130,11 @@ Checkout
     </div>
 </div>
 
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    {{ stripe_public_key|json_script:"id_stripe_public_key" }}
+    {{ client_secret|json_script:"id_client_secret" }}
+    <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
 {% endblock %}
