--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -21,10 +21,10 @@ My Profile
         <h3 class="text-muted">Delivery Information</h3>
         <p class="text-muted">This is your default delivery Information.</p>
         <hr>
-        <form action="" method="post" id="default-profile-form">
+        <form action="{% url 'profile' %}" method="post" id="default-profile-form">
             {% csrf_token %}
             {{ form|crispy }}
-            <button class="btn btn-primary" type="submit">Update Information</button>
+            <button class="btn btn-success" type="submit">Update Information</button>
         </form>
     </div>
     <!-- Order History -->
