--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block extra_title %}
-Purchase successful!
+Order successful!
 {% endblock %}
 
 {% block content %}
@@ -56,8 +56,7 @@ Purchase successful!
             <div class="row">
                 <div class="col-12 col-md-4">
                     <p class="small mb-0 text-black fw-bold">
-                        {{ item.product.name }}{% if item.product_size %} - Size
-                        {{ item.product.size|upper }}{% endif %}
+                        {{ item.product.name }}
                     </p>
                 </div>
                 <div class="col-12 col-md-8 text-md-end">
@@ -161,7 +160,7 @@ Purchase successful!
                     <p class="mb-0 text-black fw-bold">Order Total</p>
                 </div>
                 <div class="col-12 col-md-8 text-md-end">
-                    <p class="mb-0">{{ order.order_total }}</p>
+                    <p class="mb-0">£{{ order.order_total }}</p>
                 </div>
             </div>
 
@@ -170,7 +169,7 @@ Purchase successful!
                     <p class="mb-0 text-black fw-bold">Delivery</p>
                 </div>
                 <div class="col-12 col-md-8 text-md-end">
-                    <p class="mb-0">{{ order.delivery_cost }}</p>
+                    <p class="mb-0">£{{ order.delivery_cost }}</p>
                 </div>
             </div>
 
@@ -179,7 +178,7 @@ Purchase successful!
                     <p class="mb-0 text-black fw-bold">Grand Total</p>
                 </div>
                 <div class="col-12 col-md-8 text-md-end">
-                    <p class="mb-0">{{ order.grand_total }}</p>
+                    <p class="mb-0">£{{ order.grand_total }}</p>
                 </div>
             </div>
         </div>
@@ -187,6 +186,7 @@ Purchase successful!
 </div>
 <div class="row">
     <div class="col-12 text-center">
+        <p class="fw-semibold">Thank you for shopping with A to PC!</p>
         {% if from_profile %}
         <a href="{% url 'profile' %}" class="btn btn-dark my-2">
             <span class="icon me-2">
