--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -3,7 +3,7 @@
   box-sizing: border-box;
   height: 40px;
   padding: 10px 12px;
-  border: 1px solid transparent;
+  border: 1px solid #000;
   border-radius: .375rem;
   background-color: white;
   box-shadow: 0 1px 3px 0 #e6ebf1;
@@ -53,4 +53,14 @@
   justify-content: center;
   margin: 0;
   height: 100%;
+}
+
+select,
+select option {
+    color: #000000;
+}
+
+select:invalid,
+select option[value=""] {
+    color: #aab7c4 !important;
 }
