--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -24,7 +24,7 @@ My Profile
         <form action="{% url 'profile' %}" method="post" id="default-profile-form">
             {% csrf_token %}
             {{ form|crispy }}
-            <button class="btn btn-success" type="submit">Update Information</button>
+            <button class="btn btn-success float-end" type="submit">Update Information</button>
         </form>
     </div>
     <!-- Order History -->
@@ -46,7 +46,7 @@ My Profile
                     {% for order in orders %}
                     <tr>
                         <td>
-                            <a href="#" 
+                            <a href="{% url 'order_history' order.order_number %}" 
                             title="{{ order.order_number }}">
                                 {{ order.order_number|truncatechars:6 }}
                             </a>
@@ -56,13 +56,15 @@ My Profile
                             <ul class="list-unstyled">
                                 {% for item in order.lineitems.all %}
                                 <li class="small">
-                                    {{ item.product.name }} x{{ item.quantity }}
+                                    <a href="{% url 'product_detail' item.product.id %}">
+                                        {{ item.product.name }}
+                                    </a>
+                                     x{{ item.quantity }}
                                 </li>
                                 {% endfor %}
                             </ul>
                         </td>
-                        <td>{{ order.grand_total }}</td>
-
+                        <td>£{{ order.grand_total }}</td>
                     </tr>
                     {% endfor %}
                 </tbody>
