feat: Add loading default delivery info from profile to checkout and confirmation emails

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -18,6 +18,10 @@ input {
     border: 1px solid #000 !important;
 }
 
+.btn {
+    border: none !important;
+}
+
 /* Navbar and header */
 
 .top-header,
