feat: Add error handlers for page errors and fix bag toast on smaller screens

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,7 +13,7 @@ Welcome!
 <!-- Banner image -->
 <div class="row">
     <div class="col-12 text-center">
-        <a href="{% url 'products' %}" aria-label="Go to products page">
+        <a href="{% url 'products' %}?category=latest_deals,clearance" aria-label="Go to products page">
             <img src="{{ MEDIA_URL }}home-splash-img.png" class="welcome-img"
                 alt="Shop the latest tech deals with A to PC">
         </a>
