fix: Fix 403 and 400 page titles and styling errors in checkout and quantity-form

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -169,3 +169,10 @@ input {
         right: calc(50vw - 150px);
     }
 }
+
+/* Move bag popup up to prevent checkout button being unclickable */
+@media (max-height: 450px) {
+    .bag-notification-container {
+        top: 20px;
+    }
+}
