--- a/bag/templates/bag/quantity_form.html
+++ b/bag/templates/bag/quantity_form.html
@@ -3,7 +3,7 @@
     <div class="form-group">
         <div class="input-group input-group-{{ item.item_id }}">
             <div class="input-group-prepend">
-                <button class="decrement-qty btn btn-sm btn-dark text-white rounded-0 decrement-qty_{{ item.item_id }}"  
+                <button class="decrement-qty btn btn-sm border-black btn-dark text-white rounded-0 decrement-qty_{{ item.item_id }}"  
                     data-item_id="{{ item.item_id }}">
                     <span>
                         <i class="fas fa-minus fa-sm"></i>
@@ -15,7 +15,7 @@
                 name="quantity" value="{{ item.quantity }}" min="1" max="99"
                 data-item_id="{{ item.item_id }}">
             <div class="input-group-append">
-                <button class="increment-qty btn btn-sm btn-dark text-white rounded-0 increment-qty_{{ item.item_id }}"
+                <button class="increment-qty btn btn-sm border-black btn-dark text-white rounded-0 increment-qty_{{ item.item_id }}"
                     data-item_id="{{ item.item_id }}">
                     <span>
                         <i class="fas fa-plus fa-sm"></i>
