--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -27,7 +27,7 @@ Checkout
             <div class="col-7 offset-2">
                 <p class="mb-1 mt-0 small text-muted">Item</p>
             </div>
-            <div class="col-3 text-right">
+            <div class="col-3 text-end">
                 <p class="mb-1 mt-0 small text-muted">Subtotal</p>
             </div>
         </div>
@@ -46,13 +46,13 @@ Checkout
                 <p class="my-0"><strong>{{ item.product.name }}</strong></p>
                 <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
             </div>
-            <div class="col-3 text-right">
+            <div class="col-3 text-end">
                 <p class="my-0 small text-muted">£{{ item.product.price | calc_subtotal:item.quantity }}</p>
             </div>
         </div>
         {% endfor %}
         <hr class="my-0">
-        <div class="row text-black text-right">
+        <div class="row text-black text-end">
             <div class="col-7 offset-2">
                 <p class="my-0">Order Total:</p>
                 <p class="my-0">Delivery:</p>
@@ -101,7 +101,6 @@ Checkout
                 <legend class="fieldset-label small text-black px-2 w-auto">Payments</legend>
                 <!-- A Stripe card element will go here -->
                 <div class="mb-3" id="card-element"></div>
-
                 <!-- Used to display form errors -->
                 <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
                 <!-- Pass the client secret to the view so we can get the payment intent id -->
