feat: Add wishlist app and setup basic views, urls and template

--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,7 @@
                 <div class="icons">
                     <ul class="list-inline text-center">
                         <li class="list-inline-item">
-                            <a href="#" class="nav-link"><i class="fa-solid fa-heart fa-lg"></i>
+                            <a href="{% url 'wishlist' %}" class="nav-link"><i class="fa-solid fa-heart fa-lg"></i>
                                 <p>Wishlist</p>
                             </a>
                         </li>
