--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -81,9 +81,9 @@
                 </div>
 
                 <div class="col{% if s %}-12 mt-2{% endif %}">
-                    <a href="#" class="btn mt-5">
+                    <a href="{% url 'add_remove_wishlist' product.id %}" class="btn mt-5 fw-bold">
                         <span class="icon">
-                            <i class="fa-solid fa-heart fa-lg pe-1"></i>
+                            <i class="fa-solid fa-heart fa-lg pe-1 text-danger"></i>
                         </span>
                         Wishlist
                     </a>
