--- a/wishlist/templates/wishlist/wishlist.html
+++ b/wishlist/templates/wishlist/wishlist.html
@@ -8,6 +8,20 @@ Your Wishlist
 
 {% block content %}
 <div class="text-center">
-    <h2 class="fw-bold">{{ request.user }}'s Wishlist</h2>
+    <h2 class="fw-bold mb-3">{{ request.user }}'s Wishlist</h2>
 </div>
+{% if wishlist_item %}
+<div class="row">
+    <div class="col">
+        {{ wishlist_item }}
+    </div>
+</div>
+{% else %}
+<div class="row text-center">
+    <div class="col">
+        <h4 class="fw-bold mb-3">Your Wishlist is empty!</h4>
+        <a href="{% url 'products' %}" class="btn btn-dark"><i class="fa-solid fa-gift me-2"></i>Explore the store to add some products!</a>
+    </div>
+</div>
+{% endif %}
 {% endblock %}
