feat: Add email modal popup to footer and fix wishlist link in mobile header

--- a/templates/base.html
+++ b/templates/base.html
@@ -185,6 +185,29 @@
                 <!-- Newsletter Signup -->
                 <div class="col-lg-4 col-md-12 text-center">
                     <h1 class="text-uppercase fs-3 fw-bold font-monospace">Sign up to our Newsletter!</h2>
+                    <p>Get the latest Tech news!</p>
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-warning mb-2" data-bs-toggle="modal" data-bs-target="#emailModal">
+                        <i class="fa-solid fa-newspaper me-2"></i>Sign up
+                    </button>
+                    <!-- Modal -->
+                    <div class="modal fade" id="emailModal" tabindex="-1" aria-labelledby="newsletter-signup" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title text-black" id="newsletter-signup">Enter your Email below</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body text-black">
+                                    
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-success">Submit</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
