--- a/templates/includes/mobile-header.html
+++ b/templates/includes/mobile-header.html
@@ -18,7 +18,7 @@
     </div>
 </li>
 <li class="list-inline-item mx-0">
-    <a class="text-black nav-link d-block d-md-none" href="#">
+    <a class="text-black nav-link d-block d-md-none" href="{% url 'wishlist' %}">
         <div class="text-center">
             <i class="fas fa-heart"></i>
             <p class="my-0">
