feat: Add newsletter app and create newsletter signup model and form

--- a/templates/base.html
+++ b/templates/base.html
@@ -199,11 +199,13 @@
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body text-black">
-                                    
+                                    <form action="" method="post">
+                                        
+                                    </form>
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-success">Submit</button>
+                                    <button type="button" class="btn btn-success" name="newsletter-submit">Submit</button>
                                 </div>
                             </div>
                         </div>
