--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -10,144 +10,156 @@ Browse Our Store
 {% endblock %}
 
 {% block content %}
-        <h2 class="text-center fw-bold">
-            Products
-        </h2>
-        <div class="row">
-            <div class="col text-center mt-2 mb-2">
-                {% for c in current_categories %}
-                    <a class="category-badge" href="{% url 'products' %}?category={{ c.name }}">
-                        <span class="p-2 mt-2 badge bg-dark text-white border-0">{{ c.friendly_name }}</span>
-                    </a>
-                {% endfor %}
-            </div>
-        </div>
-        <div class="row justify-content-center d-none d-md-flex">
-            <div class="col-6">
-                <hr class="w-100">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12">
-                <div class="row mt-1 mb-2">
-                    <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
-                        <div class="sort-select-wrapper w-50">
-                            <select id="sort-selector" class="w-100 form-select form-select-sm border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
-                                <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
-                                <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
-                                <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)</option>
-                                <option value="rating_asc" {% if current_sorting == 'rating_asc' %}selected{% endif %}>Rating (low to high)</option>
-                                <option value="rating_desc" {% if current_sorting == 'rating_desc' %}selected{% endif %}>Rating (high to low)</option>
-                                <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A-Z)</option>
-                                <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name (Z-A)</option>
-                                <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>Category (A-Z)</option>
-                                <option value="category_desc" {% if current_sorting == 'category_desc' %}selected{% endif %}>Category (Z-A)</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 order-md-first">
-                        <p class="text-muted mt-3 text-center text-md-start">
-                            {% if search_term or current_categories or current_sorting != 'None_None' %}
-                                <span class="small"><a href="{% url 'products' %}" class="">Products Home</a> | </span>
-                            {% endif %}
-                            {{ products|length }} Products{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
-                        </p>
-                    </div>
-                </div>
-                {% if products.count == 0 %}
-                <div class="row mt-2">
-                    <div class="col-12">
-                        <h2 class="fw-bold text-center">No Products Found!</h2>
-                    </div>
-                </div>
-                {% endif %}
-                <div class="row">
-                    {% for product in products %}
-                        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                            <div class="card h-100 text-center border-0">
-                                {% if product.image %}
-                                <a href="{% url 'product_detail' product.id %}">
-                                    <img src="{{ product.image.url }}" alt="{{ product.name }}" class="card-img-top img-fluid">
-                                </a>
-                                {% else %}
-                                <a href="{% url 'product_detail' product.id %}">
-                                    <img src="{{ MEDIA_URL }}placeholder-img.png" alt="{{ product.name }}" class="card-img-top img-fluid">
-                                </a>
-                                {% endif %}
-                                <p class="card-body product-name mb-0">{{ product.name }}</p>
-                                <p class="text-start ps-2 fw-bold lead mb-0">£{{ product.price }}</p>
-                                {% if product.average_rating %}
-                                <p class="text-start ps-2 fs-6 mb-0">{{ product.average_rating }} / 5 <i
-                                            class="fa-solid fa-star star-rating text-warning"></i></p>
-                                {% else %}
-                                <small class="text-muted text-start ps-2">No Rating</small>
-                                {% endif %}
-                                <p class="text-start ps-2 mb-0"><a href="#" class="text-muted fs-6 category-tag"><i
-                                            class="fa-solid fa-tags me-1"></i> {{ product.category.friendly_name }}</a></p>
-                                {% if request.user.is_superuser %}
-                                    <small>
-                                        <a href="{% url 'edit_product' product.id %}">Edit</a>
-                                        |
-                                        <a href="{% url 'delete_product' product.id %}" class="text-danger">Delete</a>
-                                    </small>
-                                {% endif %}    
-                                <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
-                                    {% csrf_token %}
-                                    <div class="card-footer bg-white pt-2 border-0">
-                                        <input type="hidden" name="quantity" type="Number" value="1">
-                                        <input type="submit" class="btn btn-success w-100" value="Add to Bag">
-                                    </div>
-                                    <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                                </form>
-                            </div>
-                        </div>
-                        {% if forloop.counter|divisibleby:1 %}
-                        <div class="col-12 d-sm-none mb-5">
-                            <hr>
-                        </div>
-                        {% endif %}
-                        {% if forloop.counter|divisibleby:2 %}
-                            <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
-                                <hr>
-                            </div>
-                        {% endif %}
-                        {% if forloop.counter|divisibleby:3 %}
-                        <div class="col-12 d-none d-lg-block d-xl-none mb-5">
-                            <hr>
-                        </div>
-                        {% endif %}
-                        {% if forloop.counter|divisibleby:4 %}
-                        <div class="col-12 d-none d-xl-block mb-5">
-                            <hr>
-                        </div>
-                        {% endif %}
-                    {% endfor %}
-                </div>
-            </div>
-        </div>
-    <div class="btt-button shadow-sm border border-black">
-        <a class="btt-link d-flex h-100">
-            <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
-        </a>	
+<h2 class="text-center fw-bold">
+    Products
+</h2>
+<div class="row">
+    <div class="col text-center mt-2 mb-2">
+        {% for c in current_categories %}
+        <a class="category-badge" href="{% url 'products' %}?category={{ c.name }}">
+            <span class="p-2 mt-2 badge bg-dark text-white border-0">{{ c.friendly_name }}</span>
+        </a>
+        {% endfor %}
     </div>
+</div>
+<div class="row justify-content-center d-none d-md-flex">
+    <div class="col-6">
+        <hr class="w-100">
+    </div>
+</div>
+<div class="row">
+    <div class="col-12">
+        <div class="row mt-1 mb-2">
+            <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
+                <div class="sort-select-wrapper w-50">
+                    <select id="sort-selector"
+                        class="w-100 form-select form-select-sm border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+                        <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...
+                        </option>
+                        <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low
+                            to high)</option>
+                        <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price
+                            (high to low)</option>
+                        <option value="rating_asc" {% if current_sorting == 'rating_asc' %}selected{% endif %}>Rating
+                            (low to high)</option>
+                        <option value="rating_desc" {% if current_sorting == 'rating_desc' %}selected{% endif %}>Rating
+                            (high to low)</option>
+                        <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A-Z)
+                        </option>
+                        <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name (Z-A)
+                        </option>
+                        <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>
+                            Category (A-Z)</option>
+                        <option value="category_desc" {% if current_sorting == 'category_desc' %}selected{% endif %}>
+                            Category (Z-A)</option>
+                    </select>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 order-md-first">
+                <p class="text-muted mt-3 text-center text-md-start">
+                    {% if search_term or current_categories or current_sorting != 'None_None' %}
+                    <span class="small"><a href="{% url 'products' %}" class="">Products Home</a> | </span>
+                    {% endif %}
+                    {{ products|length }} Products{% if search_term %} found for
+                    <strong>"{{ search_term }}"</strong>{% endif %}
+                </p>
+            </div>
+        </div>
+        {% if products.count == 0 %}
+        <div class="row mt-2">
+            <div class="col-12">
+                <h2 class="fw-bold text-center">No Products Found!</h2>
+            </div>
+        </div>
+        {% endif %}
+        <div class="row">
+            {% for product in products %}
+            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                <div class="card h-100 text-center border-0">
+                    {% if product.image %}
+                    <a href="{% url 'product_detail' product.id %}">
+                        <img src="{{ product.image.url }}" alt="{{ product.name }}" class="card-img-top img-fluid">
+                    </a>
+                    {% else %}
+                    <a href="{% url 'product_detail' product.id %}">
+                        <img src="{{ MEDIA_URL }}placeholder-img.png" alt="{{ product.name }}"
+                            class="card-img-top img-fluid">
+                    </a>
+                    {% endif %}
+                    <p class="card-body product-name mb-0">{{ product.name }}</p>
+                    <p class="text-start ps-2 fw-bold lead mb-0">£{{ product.price }}</p>
+                    {% if product.average_rating %}
+                    <p class="text-start ps-2 fs-6 mb-0">{{ product.average_rating }} / 5 <i
+                            class="fa-solid fa-star star-rating text-warning"></i></p>
+                    {% else %}
+                    <small class="text-muted text-start ps-2">No Rating</small>
+                    {% endif %}
+                    <p class="text-start ps-2 mb-0"><a href="{% url 'products' %}?category={{ product.category.name }}" class="text-muted fs-6 category-tag"><i
+                                class="fa-solid fa-tags me-1"></i> {{ product.category.friendly_name }}</a></p>
+                    {% if request.user.is_superuser %}
+                    <small>
+                        <a href="{% url 'edit_product' product.id %}">Edit</a>
+                        |
+                        <a href="{% url 'delete_product' product.id %}" class="text-danger">Delete</a>
+                    </small>
+                    {% endif %}
+                    <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+                        {% csrf_token %}
+                        <div class="card-footer bg-white pt-2 border-0">
+                            <input type="hidden" name="quantity" type="Number" value="1">
+                            <input type="submit" class="btn btn-success w-100" value="Add to Bag">
+                        </div>
+                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                    </form>
+                </div>
+            </div>
+            {% if forloop.counter|divisibleby:1 %}
+            <div class="col-12 d-sm-none mb-5">
+                <hr>
+            </div>
+            {% endif %}
+            {% if forloop.counter|divisibleby:2 %}
+            <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
+                <hr>
+            </div>
+            {% endif %}
+            {% if forloop.counter|divisibleby:3 %}
+            <div class="col-12 d-none d-lg-block d-xl-none mb-5">
+                <hr>
+            </div>
+            {% endif %}
+            {% if forloop.counter|divisibleby:4 %}
+            <div class="col-12 d-none d-xl-block mb-5">
+                <hr>
+            </div>
+            {% endif %}
+            {% endfor %}
+        </div>
+    </div>
+</div>
+<div class="btt-button shadow-sm border border-black">
+    <a class="btt-link d-flex h-100">
+        <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+    </a>
+</div>
 {% endblock %}
 
 {% block postloadjs%}
 {{ block.super }}
 <script type="text/javascript">
     // Scroll to top of the page on click
-    $('.btt-link').click(function(e) {
-        window.scrollTo(0,0)
+    $('.btt-link').click(function (e) {
+        window.scrollTo(0, 0)
     })
 </script>
 
 <script type="text/javascript">
-    $('#sort-selector').change(function() {
+    $('#sort-selector').change(function () {
         var selector = $(this);
         var currentUrl = new URL(window.location);
 
         var selectedVal = selector.val();
-        if (selectedVal != "reset"){
+        if (selectedVal != "reset") {
             var sort = selectedVal.split("_")[0];
             var direction = selectedVal.split("_")[1];
 
