--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -14,6 +14,9 @@
 </h2>
 <!-- Post body -->
 <div class="row justify-content-center">
+    <div class="text-center mb-3">
+        <a href="{% url 'blog' %}" class="btn btn-primary">Back to Blog</a>
+    </div>
     {% if request.user.is_superuser %}
     <div class="text-center mb-3">
         <a href="#" class="btn btn-warning me-1" role="button" aria-label="Go to blog post edit page">Edit</a>
