--- a/blog/templates/blog/add_post.html
+++ b/blog/templates/blog/add_post.html
@@ -19,13 +19,7 @@ Add Blog post
         <hr>
         <form action="{% url 'add_post' %}" method="POST" class="form mb-2" enctype="multipart/form-data">
             {% csrf_token %}
-            {% for field in form %}
-                {% if field.name != 'image' %}
-                    {{ field | as_crispy_field }}
-                {% else %}
-                    {{ field }}
-                {% endif %}
-            {% endfor %}
+            {{ form | crispy}}
             <div class="text-center">
                 <a href="{% url 'blog' %}" class="btn btn-danger">Cancel</a>
                 <button class="btn btn-success" type="submit">Add Post</button>
