--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -19,14 +19,14 @@
     </div>
     {% if request.user.is_superuser %}
     <div class="text-center mb-3">
-        <a href="#" class="btn btn-warning me-1" role="button" aria-label="Go to blog post edit page">Edit</a>
+        <a href="{% url 'edit_post' blog_post.slug %}" class="btn btn-warning me-1" role="button" aria-label="Go to blog post edit page">Edit</a>
         <a href="#" class="ms-1 btn btn-danger" role="button" aria-label="Go to blog post delete page">Delete</a>
     </div>
     {% endif %}
     <div class="col-12 col-md-6 pb-4 ">
         <div class="card h-100 text-center border-0">
-            {% if blog_post.image %}
-            <img src="{{ blog_post.image.url }}" alt="{{ blog_post.title }}" class="card-img-top img-fluid">
+            {% if blog_post.blog_image %}
+            <img src="{{ blog_post.blog_image.url }}" alt="{{ blog_post.title }}" class="card-img-top img-fluid">
             {% else %}
             <img src="{{ MEDIA_URL }}placeholder-img.png" alt="{{ blog_post.title }}" class="card-img-top img-fluid">
             {% endif %}
