--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -49,10 +49,10 @@ Welcome to our blog
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center pb-3">
             {% if page_obj.has_previous %}
-            <li><a href="?page={{ page_obj.previous_page_number }}" class="btn btn-dark">&laquo; PREV </a></li>
-            {% endif %}
+            <li><a href="?page={{ page_obj.previous_page_number }}" rel="nofollow" class="btn btn-dark">&laquo; PREV </a></li>
+            {% endif %} 
             {% if page_obj.has_next %}
-            <li><a href="?page={{ page_obj.next_page_number }}" class="btn btn-dark"> NEXT &raquo;</a></li>
+            <li><a href="?page={{ page_obj.next_page_number }}" rel="nofollow" class="btn btn-dark"> NEXT &raquo;</a></li>
             {% endif %}
         </ul>
     </nav>
