--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -237,7 +237,39 @@ Welcome!
 </div>
 <!-- Blog -->
 <div class="row">
-    <h2 class="fw-bold">Check Our Blog</h2>
+    <h2 class="fw-bold">Latest From Our Blog <a href="{% url 'blog' %}" class="btn btn-dark ms-3">Explore More!</a></h2>
+    {% for blog in products.latest_posts %}
+    <div class="col-6 col-lg-3 pb-4">
+        <div class="card h-100 text-center border-0">
+            <a href="{% url 'post_detail' blog.slug %}">
+                {% if blog.blog_image %}
+                <img src="{{ blog.blog_image.url }}" alt="{{ blog.title }}" class="card-img-top img-fluid">
+                {% else %}
+                <img src="{{ MEDIA_URL }}placeholder-img.png" alt="{{ blog.title }}" class="card-img-top img-fluid">
+                {% endif %}
+            </a>
+            <p class="card-body fw-bold product-name mb-0">{{ blog.title }}</p>
+            <p class="text-start text-muted ps-2 lead mb-0">{{ blog.subtitle }}</p>
+            {% if request.user.is_superuser %}
+            <small>
+                <a href="{% url 'edit_post' blog.slug %}">Edit</a>
+                |
+                <a href="{% url 'delete_post' blog.slug %}" class="text-danger">Delete</a>
+            </small>
+            {% endif %}
+            <div class="card-footer bg-white pt-2 border-0">
+                <a href="{% url 'post_detail' blog.slug %}" class="btn btn-success w-100">View Post</a>
+            </div>
+        </div>
+    </div>
+    {% if forloop.counter|divisibleby:2 %}
+    <div class="row justify-content-center d-sm-flex d-md-flex d-lg-none">
+        <div class="col-8 mb-3">
+            <hr>
+        </div>
+    </div>
+    {% endif %}
+    {% endfor %}
 </div>
 
 {% endblock %}
