--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <meta name="description"
         content="Shop online today for the best deals on the latest PC peripherals, monitors & storage. Fast delivery worldwide!">
     <meta name="keywords"
-        content="PC parts, Computer parts, PC peripherals, PC monitors, Keyboards, Computer mouse, PC storage, PC peripheral deals, PC storage deals, Cheap computer monitors">
+        content="PC parts, Computer parts, PC peripherals, PC monitors, Keyboards, Computer mouse, PC storage, PC peripheral deals, PC storage deals, Cheap computer monitors, Tech deals">
     {% endblock %}
 
     {% block extra_meta %}
@@ -87,7 +87,7 @@
                                 {% if request.user.is_authenticated %}
                                 {% if request.user.is_superuser %}
                                 <a href="{% url 'admin:index' %}" class="dropdown-item">Admin</a>
-                                <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
+                                <a href="{% url 'add_product' %}" class="dropdown-item">Add Product</a>
                                 {% endif %}
                                 <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                                 <a href="{% url 'account_logout' %}" class="dropdown-item">Sign Out</a>
@@ -178,9 +178,8 @@
                         {% endif %}
                         <li><a href="{% url 'profile' %}">My Profile</a></li>
                         {% endif %}
-                        <li><a href="#">About Us</a></li>
+                        <li><a href="{% url 'about_us' %}">About Us</a></li>
                         <li><a href="{% url 'blog' %}">Blog</a></li>
-                        <li><a href="#">Brands</a></li>
                         <li><a href="#">Privacy Policy</a></li>
                     </ul>
                 </div>
