fix: fix url for logo image

--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
                 <!-- Logo -->
                 <div>
                     <a href="{% url 'home' %}" class="nav-link">
-                        <img src="{% static '../media/logo-removebg.png' %}" class="logo-img mx-0" alt="A to PC"
+                        <img src="{{ MEDIA_URL }}logo-removebg.png' " class="logo-img mx-0" alt="A to PC"
                             aria-label="Go to home page">
                     </a>
                 </div>
