fix: Add some comments to pages and fix page layout for blog details

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -59,6 +59,7 @@ Welcome!
             </form>
         </div>
     </div>
+    <!-- Adds hr at different screen sizes -->
     {% if forloop.counter|divisibleby:2 %}
     <div class="row justify-content-center d-sm-flex d-md-flex d-lg-none">
         <div class="col-8 mb-3">
