--- a/blog/templates/blog/add_post.html
+++ b/blog/templates/blog/add_post.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
-{% block title %}
+{% block extra_title %}
 Add Blog post
 {% endblock %}
 
@@ -19,7 +19,7 @@ Add Blog post
         <hr>
         <form action="{% url 'add_post' %}" method="POST" class="form mb-2" enctype="multipart/form-data">
             {% csrf_token %}
-            {{ form | crispy}}
+            {{ form | crispy }}
             <div class="text-center">
                 <a href="{% url 'blog' %}" class="btn btn-danger">Cancel</a>
                 <button class="btn btn-success" type="submit">Add Post</button>
